Added Page Object Model(POM)/TestNG hybrid model..