@@ -8,11 +8,14 @@
     <artifactId>Playwright-Java-WebUIAutomation</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Playwright Java WebUIAutomation</name>
+    <url>http://www.ntxz.org</url>
+
     <properties>
         <gherkin.version>26.0.3</gherkin.version>
         <io.cucumber.version>7.11.1</io.cucumber.version>
         <org.testng.version>7.7.1</org.testng.version>
         <slf4j.version>2.0.6</slf4j.version>
+        <extentreports-version>5.0.9</extentreports-version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,7 +30,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${org.testng.version}</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -67,6 +70,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>${extentreports-version}</version>
+        </dependency>
 
     </dependencies>
     <build>
@@ -91,6 +99,21 @@
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
+            <!--<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng/testngRegressions.xml</suiteXmlFile>
+                        &lt;!&ndash; <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> &ndash;&gt;
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>-->
+
         </plugins>
     </build>
 
